Fix for really long title on post#show page
Removed overflow:auto as it gives scrollbar to the title
or it was hiding the full title

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.posts-heading {
+  display: inline-block;
+}
+
 #tag_cloud {
   width: 400px;
   line-height: 1.6em;
